2022-03-13 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as6500/r65pst.c,
	  sdas/as6808/m08pst.c,
	  sdas/as8051/i51pst.c,
	  sdas/as8xcxxx/ds8pst.c,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk14/pdk14pst.c,
	  sdas/aspdk15/pdk15pst.c,
	  sdas/aspdk16/pdk16pst.c,
	  sdas/asrab/rabpst.c,
	  sdas/asstm8/stm8pst.c,
	  sdas/astlcs90/t90pst.c,
	  sdas/asz80/z80pst.c:
	  Enable new mnemonics on all ports.

2022-03-12 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* support/regression/tests/bitintarith.c,
	  src/pdk/main.c:
	  Disable a test that failed on pdk15 for wide _BitInt due to lack of memory, reenable 64-_BitInt support for pdk.

2022-03-12 Gabriele Gorla <gorlik@yahoo.com>

	* src/mod6502/gen.c:
	  Small genCast() improvements.

2022-03-12 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Eliminate nop jps.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/main.c:
	  Limit _BitInt size to 16 for pdk (temporarily, until an issue is fixed).
	* src/pdk/main.c:
	  Fix handling of parameters of odd size > 2.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/mcs51/gen.c:
	  Basic _BitInt support for mcs51.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/widebitintbitfield.c:
	  Fix cast from signed integer type to wider unsigned bit-precise type.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/SDCCval.c,
	  src/z80/gen.c:
	  support/regression/tests/widebitintbitfield.c:
	  Fixes for bit-precise bit-fields.

2022-03-11 Daniel Drotos <drdani@mazsola.iit.uni-miskolc.hu>